syntax = "proto3";

package pl.pedyk.user;

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc CreateUser(User) returns (User);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
}

message User {
  string id = 1;
  string name = 2;
}

